# bio-ner

./: FOXA1.txt  README.md  bio-ner.py  entities.txt  pyproject.toml  requirements.txt
