[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-ner"
version = "0.1.0"
description = "A biomedical named entity recognition project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "spacy",
    "scispacy",
    "numpy==1.26.4"
]

[tool.setuptools]
packages = ["bio_ner"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]